<resources>
    <string name="app_name">ParkourMapSG</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spot_area_all">All</string>
    <string name="spot_area_central">Central</string>
    <string name="spot_area_east">East</string>
    <string name="spot_area_north">North</string>
    <string name="spot_area_northeast">NorthEast</string>
    <string name="spot_area_west">West</string>
    <string name="text_loading_data">Loading all spots...</string>
</resources>
