<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent" android:layout_height="match_parent"
             tools:context=".Fragment.SpotFragment">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:descendantFocusability="blocksDescendants">

        <RadioGroup
                android:id="@+id/rg_area1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="horizontal">
            <RadioButton
                    android:id="@+id/rb_area_central"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spot_area_central"/>

            <RadioButton
                    android:id="@+id/rb_area_east"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spot_area_east"/>

            <RadioButton
                    android:id="@+id/rb_area_north"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spot_area_north"/>
        </RadioGroup>

        <RadioGroup
                android:id="@+id/rg_area2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_area1"
                android:orientation="horizontal">
            <RadioButton
                    android:id="@+id/rb_area_northeast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spot_area_northeast"/>

            <RadioButton
                    android:id="@+id/rb_area_west"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spot_area_west"/>

            <RadioButton
                    android:id="@+id/rb_area_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spot_area_all"/>

        </RadioGroup>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_spot"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_area2"
                app:layout_constraintBottom_toBottomOf="parent"
        />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>